# mavros_controllers

geometric_controller/: CMakeLists.txt
geometric_controller/cfg/: GeometricController.cfg
geometric_controller/include/geometric_controller/: geometric_controller.h
geometric_controller/launch/: config.yaml  mav_trajectory_track_circle.launch  rviz_lcoal.launch  sitl_no_sim.launch  sitl_trajectory_track_circle.launch  trajectory_controller.launch  trajectory_track_circle.launch
geometric_controller/src/: controller.cpp  controller.h  geometric_controller.cpp
geometric_controller/test/: geometric_controller-test.cpp
lqr_controller/: CMakeLists.txt  package.xml
lqr_controller/include/lqr_controller/: lqr_controller.h
lqr_controller/src/: lqr_controller.cpp  lqr_controller_node.cpp
trajectory_publisher/: CMakeLists.txt
trajectory_publisher/include/trajectory_publisher/: auto_offboard_arm.h  trajectoryPublisher.h
trajectory_publisher/launch/: mav_trajectory_setpointraw.launch
trajectory_publisher/src/: auto_offboard_arm.cpp  auto_offboard_arm_node.cpp  trajectoryPublisher.cpp
